--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.com.newlecture.web.dao=TRACE
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://db.newlecture.com:3306/rlanddb
 spring.datasource.username=rland
