--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.url=jdbc:mariadb://db.newlecture.com:3306/rlanddb
 spring.datasource.username=rland
 spring.datasource.password=20220823
 
+mybatis.type-aliases-package=com.newlecture.web.entity
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
