1216 thymeleaf url 적용 실습

--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.com.newlecture.web.dao=TRACE
 
+#server.servet.session.timeout=1000m
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://db.newlecture.com:3306/rlanddb
 spring.datasource.username=rland
