1220 javascript를 이용한 데이터 이용 실습 페이지 전환 시 로딩 추가 로딩 취소 시 abort 설정

--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.thymeleaf.cache=false
 logging.level.com.newlecture.web.dao=TRACE
 
 #server.servet.session.timeout=1000m
