1222 이미지 파일 선택 시 미리보기 실습 이미지 파일 드래그 & 드랍 진행 중

--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -11,5 +11,10 @@ spring.datasource.url=jdbc:mariadb://db.newlecture.com:3306/rlanddb
 spring.datasource.username=rland
 spring.datasource.password=20220823
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=500MB
+
 mybatis.type-aliases-package=com.newlecture.web.entity
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
+
+spring.output.ansi.enabled=always
