1227 서블릿 필터 security 인증 및 사용자 추가 실습

--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -1,8 +1,13 @@
+# spring.security.user.name=root
+# spring.security.user.password=root
+# spring.security.user.roles=ADMIN
+
 
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 spring.thymeleaf.cache=false
-logging.level.com.newlecture.web.dao=TRACE
+logging.level.com.newlecture.web.dao=trace
+logging.level.org.springframework.security=trace
 
 #server.servet.session.timeout=1000m
 
