--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 # spring.security.user.password=root
 # spring.security.user.roles=ADMIN
 
+spring.security.oauth2.client.registration.google.client-id=880764697648-92tlren9anusjnouh45v9stsstoqm0cp.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
 
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
@@ -22,4 +25,4 @@ spring.servlet.multipart.max-request-size=500MB
 mybatis.type-aliases-package=com.newlecture.web.entity
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 
-spring.output.ansi.enabled=always
+# spring.output.ansi.enabled=always
