1229 로그인에 따른 페이지 출력 로그인 후 정보 받아서 id 값 가져오기 DTO 생성 실습

--- a/rland/src/main/resources/application.properties
+++ b/rland/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-TJSSlS2NF
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 spring.thymeleaf.cache=false
-logging.level.com.newlecture.web.dao=trace
-logging.level.org.springframework.security=trace
+# logging.level.com.newlecture.web.dao=trace
+# logging.level.org.springframework.security=trace
 
 #server.servet.session.timeout=1000m
 
@@ -25,4 +25,4 @@ spring.servlet.multipart.max-request-size=500MB
 mybatis.type-aliases-package=com.newlecture.web.entity
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 
-# spring.output.ansi.enabled=always
+spring.output.ansi.enabled=always
