--- a/rland/pom.xml
+++ b/rland/pom.xml
@@ -71,9 +71,14 @@
          <version>3.0.0</version>
       </dependency>
       <dependency>
-	     <groupId>nz.net.ultraq.thymeleaf</groupId>
-	     <artifactId>thymeleaf-layout-dialect</artifactId>
-	  </dependency>
+         <groupId>nz.net.ultraq.thymeleaf</groupId>
+         <artifactId>thymeleaf-layout-dialect</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.thymeleaf.extras</groupId>
+         <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+      </dependency>
+
 
 
       <dependency>
